# Job-Search-Assistant

./: .pylintrc  README.en.md  README.md  README.pt-br.md  auth_setup.py  config.json  filters.json  filtros.json  listings.py  manage.py  pyproject.toml  requirements.txt  scraper.py  teste.json  todo.md  update_db_to_filter.py  vagas.py
data/: db.sqlite3
django_config/: asgi.py  settings.py  urls.py  wsgi.py
interfaces/dashboard/: apps.py  urls.py  views.py
interfaces/dashboard/static/: dashboard.css
interfaces/dashboard/templates/: dashboard.html
interfaces/static/: global.css
interfaces/templates/: end.html  start.html
interfaces/vagas/: admin.py  apps.py  models.py  urls.py  views.py
interfaces/vagas/migrations/: 0001_initial.py  0002_listing_closed_alter_listing_company_name.py
interfaces/vagas/static/: script.js  style.css  vagas.css  vagas.js
interfaces/vagas/templates/: vagas.html
interfaces/vagas/templatetags/: get_type.py
interfaces/vagas_interface/: admin.py  apps.py  models.py  urls.py  views.py
interfaces/vagas_interface/migrations/: 0001_initial.py  0002_alter_company_options_alter_listing_options_and_more.py
interfaces/vagas_interface/static/: script.js  style.css
interfaces/vagas_interface/templates/: index.html
modules/: __init__.py  catho.py  exceptions.py  glassdoor.py  linkedin.py  utils.py  vagas_com.py
